Fix - Profile Detail text align to center

--- a/assets/css/my-account-layout.scss
+++ b/assets/css/my-account-layout.scss
@@ -136,7 +136,7 @@
 			.user-registration-EditProfileForm {
 				.user-registration-profile-fields {
 					h2 {
-						text-align: left;
+						text-align: center;
 					}
 				}
 			}
